# mingl

./: .gitignore  .gitmodules  CMakeLists.txt  GLFWConfig.cmake  Makefile  OpenBLASConfig.cmake  README.md  flake.nix  gen_uv.py
scripts/: shader_header.sh
src/: CMakeLists.txt  camera.c  camera.h  camera_old.c  cube.h  data_structures.c  data_structures.h  entities.h  linmath.h  main.c  materials.h  memory.h  obj3d.c  obj3d.h  opengl.c  opengl.h  opengl_util.c  opengl_util.h  shader_util.c  shader_util.h  shaders.c  shaders.h  shapes.c  types.c  types.h  uv.h
src/demos/: basic.c  first_demo.c
src/geometry/: CMakeLists.txt  geometry.c  geometry.h
src/mesh/: obj.h
src/scenes/: CMakeLists.txt  default.c  lamp.c  scenes.h  static_object.c  surface.c
src/shaders/: default.c  directional_light.c  lamp.c  learning.vert  phong.c  shaders.h  textured.c
src/shaders/default/: default.frag  default.vert
src/shaders/directional_light/: directional_light.frag  directional_light.vert
src/shaders/lamp/: lamp.frag  lamp.vert
src/shaders/learning/: learning.frag  learning.vert
src/shaders/phong/: phong.frag  phong.vert
src/shaders/textured/: textured.frag  textured.vert
tests/: CMakeLists.txt  main_test.c  test_data_structure.c  test_entities.c  test_obj3d.c  tests.h
